--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<script src="https://www.google.com/recaptcha/api.js"></script>
 	<!-- favicons
      ================================================== -->
-	<link rel="icon" type="image/png" href="../images/favicon.png">
+	<link rel="icon" type="image/png" href="./images/favicon.png">
 	<link type="image/png" href="./images/portfolio/Certification/">
 </head>
 
